vlib/v/checker/tests/unimplemented_interface_c.out
vlib/v/checker/tests/unimplemented_interface_c.vv:7:5: notice: unused parameter: `c`
    5 | struct Cat {}
    6 | 
    7 | fn (c Cat) name(s string) {}
      |     ^
    8 | 
    9 | fn foo(a Animal) {}
vlib/v/checker/tests/unimplemented_interface_c.vv:7:17: notice: unused parameter: `s`
    5 | struct Cat {}
    6 | 
    7 | fn (c Cat) name(s string) {}
      |                 ^
    8 | 
    9 | fn foo(a Animal) {}
vlib/v/checker/tests/unimplemented_interface_c.vv:9:8: notice: unused parameter: `a`
    7 | fn (c Cat) name(s string) {}
    8 | 
    9 | fn foo(a Animal) {}
      |        ^
   10 | 
   11 | fn main() {
vlib/v/checker/tests/unimplemented_interface_c.vv:12:6: error: `Cat` incorrectly implements method `name` of interface `Animal`: expected 1 parameter(s), not 2
   10 | 
   11 | fn main() {
   12 |     foo(Cat{})
      |         ~~~~~
   13 | }
Details: main.Animal has `fn name(x main.Animal)`
         main.Cat has `fn name(c main.Cat, s string)`
