vlib/v/checker/tests/unimplemented_interface_c.vv
interface Animal {
	name()
}

struct Cat {}

fn (c Cat) name(s string) {}

fn foo(a Animal) {}

fn main() {
	foo(Cat{})
}
